--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -100,11 +100,11 @@ background-color: #0C0C38;
 }
 
 .rounded-landscape{
-  max-height: 100%;
+  height: 100%;
 }
 
 .rounded-portrait{
-  max-width: 100%;
+  width: 100%;
 }
 
 .inline-profile-info{
